feat: add body styles

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -10,8 +10,15 @@
 	--neutral-light-grey: hsl(217, 12%, 63%);
 	--neutral-medium-grey: hsl(216, 12%, 54%);
 	--neutral-dark-blue: hsl(213, 19%, 18%);
-	--font-family-title: "Overpass", sans-serif;
 }
+
+body{
+    background-color: var(--neutral-dark-blue);
+    font-family: "Overpass", sans-serif;
+    font-size: 15px;
+    min-width: 375px;
+}
+
 
 .attribution {
 	font-size: 11px;
