--- a/styles/styles.css
+++ b/styles/styles.css
@@ -20,7 +20,7 @@ html {
 	--neutral-light-blue: #262f38;
 	--neutral-dark: hsl(228, 11%, 9%);
 	--sm: 1.4rem;
-	--md: 2rem;
+	--md: 1.5rem;
 	--lg: 2.3rem;
 }
 
@@ -46,6 +46,14 @@ h1 {
 	place-self: center;
 }
 
+.section-rating__card-rating {
+	display: grid;
+	grid-template-rows: auto repeat(3, 1fr) auto;
+}
+.section-rating__card-classification {
+	display: grid;
+	align-items: center;
+}
 .section-rating__card-rating,
 .section-rating__card-classification {
 	width: 328px;
@@ -78,7 +86,7 @@ h1 {
 .section-rating__card-rating__buttons-container {
 	display: flex;
 	justify-content: space-between;
-	margin: 25px 0 20px 0;
+	margin: 25px 0;
 }
 
 .section-rating__card-rating__button:hover {
@@ -97,7 +105,7 @@ h1 {
 	color: var(--neutral-white);
 	background-color: var(--primary-orange);
 	border: none;
-	width: 278px;
+	width: 100%;
 	height: 45px;
 	border-radius: 25px;
 	letter-spacing: 4px;
@@ -113,12 +121,16 @@ h1 {
 	text-align: center;
 }
 
-.section-rating__card-classification__selection {
-	background-color: var(--neutral-light-blue);
+.section-rating__card-classification__selection-container {
+	
 	color: var(--primary-orange);
+	background-color: var(--neutral-light-blue);
 	padding: 8px;
-	margin: 20px 50px 0 50px;
+	margin: 20px 40px 0 40px;
 	border-radius: 20px;
+	display: flex;
+	align-items: center;
+	justify-content: center;
 }
 
 .section-rating__card-classification__h1 {
