--- a/styles/styles.css
+++ b/styles/styles.css
@@ -3,8 +3,8 @@ html {
 	box-sizing: border-box;
 }
 *,
-*:before,
-*:after {
+*::before,
+*::after {
 	margin: 0;
 	padding: 0;
 	box-sizing: inherit;
